# boxlite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  biome.json  jest.preset.js  libs  tsconfig.base.json
.claude/agents/: verdict-auditor.md
.claude/hooks/: preflight-verdict-check.sh  preflight-verdict-check.test.sh
.github/workflows/: README.md  build-runner-binary.yml  build-runtime.yml  e2e-local.yml  e2e-stack.yml  lint.yml  test.yml
apps/: CLAUDE.md  NOTICE  eslint.config.mjs  go.work  go.work.sum  jest.preset.js  nx.json  package.json  tsconfig.base.json
apps/.claude/: launch.json
apps/api/: Dockerfile  jest.config.ts  project.json  tsconfig.spec.json  webpack.config.js
apps/api-client-go/: api_box.go  model_create_ssh_access_body_dto.go  model_ssh_access_validation_dto.go  model_ssh_access_validation_dto_test.go
apps/cli/: main.go
apps/common-go/: go.mod  go.sum
apps/dashboard/: project.json  tsconfig.app.json  vite.config.mts
apps/infra/: .env.example  README.md  sst.config.ts
apps/infra-local/: CONNECTIONS.md  Makefile  README.md  api.env  pyproject.toml
apps/infra-local/boxlite_local/: __init__.py  __main__.py  cli.py  config.py  doctor.py  execwrap.py  orchestrator.py  services.py  types.py
apps/infra-local/compose/: __main__.py  native.py
apps/infra-local/configs/: api.env
apps/infra-local/configs/minio/: init.sh
apps/infra-local/scripts/: _stack-common.sh  seed-init-data.sh  stack-build.sh  stack-down.sh  stack-logs.sh  stack-reset.sh  stack-restart.sh  stack-status.sh  stack-up.sh
apps/infra-local/tests/integration/: test_e2e_full.py  test_multi_service.py
apps/infra-local/tests/unit/: test_config.py  test_doctor_lsof.py  test_orchestrator.py  test_topo.py
apps/otel-collector/: Dockerfile  builder-config.dev.yaml  config.yaml  project.json
apps/proxy/: Dockerfile  project.json
apps/runner/: Dockerfile  README.md  project.json
apps/scripts/: admin-observability-agent-smoke.mjs  (+7 more)
docs/: README.md
make/: build.mk  changes.mk  help.mk  test.mk
openapi/: box.openapi.yaml
scripts/: clean.sh
src/session-frame/: Cargo.toml
src/session-frame/src/: frame.rs  lib.rs  payload.rs  stream.rs
src/session-frame/tests/: golden_vectors.rs
src/ssh-gateway-russh/: Cargo.toml  Dockerfile  README.md
src/ssh-gateway-russh/src/: config.rs  frames.rs  http.rs  lib.rs  main.rs  metrics.rs  redact.rs  runner.rs  server.rs  token.rs
src/ssh-gateway-russh/tests/: gateway_e2e.rs  token_validator.rs
src/ssh-gateway-russh/tests/common/: mod.rs
(+638 files in other folders)
